--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "helper",
-  "keywords": ["helper"],
-  "description": "Minimal packages needed" ,
-  "version": "0.1.0",
+  "name": "simplehelper",
+  "keywords": ["simple","helper"],
+  "description": "Node.js module for basic utility",
+  "preferGlobal": "true",
+  "bin": { "simplehelper": "helper.js" },
+  "version": "0.0.1",
   "author": "Ayaz Pasha <ayazpasha2434@gmail.com>",
   "directories" : {
     "lib" : "./lib"
@@ -15,5 +17,5 @@
   "main": "./lib/helper.js",
   "engines": { "node": ">= 0.4.0" },
   "dependencies" : {},
-  "licenses": [ { "type": "MIT" } ]
+  "engines": { "node": "*" }
 }
